<resources>
    <string name="app_name">Your Leaf</string>
    <string name="enterPassword">Enter Password</string>
    <string name="password">Password</string>
    <string name="createLeaf">Create leaf</string>
    <string name="enterAddress">Enter Address</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="watering">Watering</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="GET">GET</string>
    <string name="POST">POST</string>
    <string name="PUT">PUT</string>
    <string name="currentLightningPercentage">Current lightning percentage</string>
    <string name="currentPercentage">Current %</string>
    <string name="little">Little</string>
    <string name="medium">Medium</string>
    <string name="extra">Extra</string>
    <string name="wateringAmount">"Watering Amount</string>
    <string name="current">Current</string>
    <string name="target">Target</string>
    <string name="Optimal">Optimal</string>
    <string name="optimal">optimal</string>
    <string name="plusSign">+</string>
    <string name="minusSign">-</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="targetTemperatureHint">(target temperature)</string>
    <string name="quitMessage">Do you want to quit?</string>
    <string name="yourLeaf">Your Leaf</string>
    <string name="lightning">Lightning</string>
    <string name="temperature">Temperature</string>
    <string name="welcome">Welcome</string>
    <string name="connect">Connect</string>
    <string name="enterName">Enter System Name</string>
    <string name="create">Create</string>
    <string name="systemName">System Name</string>
    <string name="value">value</string>
    <string name="state">state</string>
    <string name="systemInformation">System Information</string>
    <string name="save">Save</string>
    <string name="action">Action</string>
    <string name="settingsSaved">Settings Saved</string>
    <string name="okay">Okay</string>
    <string name="wateringDone">Watering was successful</string>
    <string name="wateringFailed">Watering failed</string>
    <string name="savingFailed">Saving failed</string>
    <string name="unableToAuthenticate">Unable to Authenticate</string>
    <string name="operationFailed">Operation Failed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
